--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,9 @@
 Package: w2v
 Type: Package
-Title: TODO
+Title: Parallel 'Word2Vec'
 Version: 0.1-0
-Description: TODO
+Description: Bindings for a MPI plus threads parallel implementation of
+    word2vec.
 License: BSD 2-clause License + file LICENSE
 Depends:
     R (>= 3.0.0),
