--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,8 @@ License: BSD 2-clause License + file LICENSE
 Depends:
     R (>= 3.0.0),
     pbdMPI (>= 0.3-8)
+LinkingTo:
+    float (>= 0.2-1)
 SystemRequirements: OpenMPI (>= 1.5.4) on Solaris, Linux, Mac, and FreeBSD.
     MS-MPI (Microsoft HPC Pack 2012) or MPICH2 (>= 1.4.1p1) on Windows.
 ByteCompile: yes
